# Ai-comp

./: .env.example  .gitignore  Promt.md  README.md  document.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260707_0001_initial_schema.py
backend/app/: main.py  worker.py
backend/app/agents/: base.py  prompt_builder.py  registry.py  schemas.py
backend/app/agents/configs/: architect.yaml  backend_engineer.yaml  ceo.yaml  ceo_approval.yaml  database_engineer.yaml  designer.yaml  devops_engineer.yaml  frontend_engineer.yaml  marketing_manager.yaml  product_manager.yaml  qa_engineer.yaml  security_engineer.yaml  technical_writer.yaml
backend/app/application/orchestration/: dag.py  orchestrator.py  templates.py
backend/app/application/services/: analytics_service.py  artifact_service.py  auth_service.py  memory_service.py  notification_service.py  project_service.py
backend/app/core/: config.py  errors.py  logging.py  metrics.py  security.py
backend/app/domain/: entities.py  policies.py  value_objects.py
backend/app/domain/ports/: __init__.py  event_bus.py  llm_gateway.py  memory_store.py  repositories.py  task_queue.py
backend/app/infrastructure/db/: engine.py  mappers.py  models.py  repositories.py
backend/app/presentation/: deps.py  middleware.py  ws.py
backend/app/presentation/api/: auth.py  (+7 more)
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_platform_api.py  test_projects_api.py  test_services.py  test_workflow.py
backend/tests/unit/: test_agents.py  test_circuit_breaker.py  test_dag.py  test_orchestrator_helpers.py  test_policies.py  test_security.py  test_validators.py  test_value_objects.py
(+71 files in other folders)
